[package]

name = "intecture-cli"
version = "0.1.0"
authors = [ "Peter Hayes <peter.hayes@betweenlines.co.uk>" ]
license = "MPL-2.0"
description = "CLI component for Intecture infrastructure. Intecture is the developer friendly, multi-lingual configuration management tool."
keywords = ["intecture", "incli", "cli"]
homepage = "https://intecture.io"
repository = "https://github.com/betweenlines/intecture-cli"

[dependencies]

czmq = { git = "https://github.com/petehayes102/rust-czmq.git", branch = "dev" }
docopt = "0.6.*"
rustc-serialize = "0.3.*"
time = "0.1.*"

[dev-dependencies]

tempdir = "0.3"

[[bin]]

name = "incli"
