[package]

name = "intecture-cli"
version = "0.2.1"
authors = [ "Peter Hayes <peter.hayes@betweenlines.co.uk>" ]
license = "MPL-2.0"
description = "CLI component for Intecture infrastructure. Intecture is the developer friendly, multi-lingual configuration management tool."
keywords = ["intecture", "incli", "cli"]
homepage = "https://intecture.io"
repository = "https://github.com/intecture/cli"

[dependencies]

czmq = { git = "https://github.com/petehayes102/rust-czmq.git", tag = "0.0.5" }
docopt = "0.6.*"
intecture-api = { git = "https://github.com/intecture/api.git", branch = "dev" }
rustc-serialize = "0.3.*"
time = "0.1"
zdaemon = { git = "https://github.com/betweenlines/zdaemon.git", tag = "0.0.1" }

[dev-dependencies]

tempdir = "0.3"

[[bin]]

name = "incli"
